# PythonMLP_2024_PAMCAP_EPCT_Rita

./: .gitignore  MLPy-readme.odt  README.md  agencytask.py  analyse_mlp_result.py  anisochrony-gui.py  ehrlesamson.py  go.py  hydeperetztask.py  mlp-script.py  mlp.py  pyproject.toml  run.py  testrun.py
data/: README
legacy/pc_box_comportement1/: aniso-pitchshift-gui-old.py  anisochrony-gui.py  ehrlesamson.py  fileoutput.py  fivetoneseries.py  mlp.py  pitchtask-gui.py  pitchtask.py  sandbox-pitch-tempo.py  task.py
mlpcore/: README.txt  fileoutput.py  mlp.py  task.py
src/pythonmlp/: __init__.py  mlp.py
stories/Bunny/: story.xlsx
stories/Bunny_old/: story.xlsx
stories/Lala/: story.xlsx
stories/Lala_old/: story.xlsx
tests/: Simulate_MLP_Procedure.ipynb  anisochrony-gui.py  anisochrony_bunny.py  basic.py  ehrlesamson.py  pitch_lala.py  pitchtask.py  simulate.py
vintage/: anisochrony-gui.py  run-example.py
